--- a/mmcalendar/build.gradle
+++ b/mmcalendar/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 }
