--- a/mmcalendar/build.gradle
+++ b/mmcalendar/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
     implementation files('src/main/assets/myanmar-calendar-1.0.6.RC3.jar')
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
